# interpies

./: .gitignore  LICENSE  README.md  hatch.toml  pyproject.toml  requirements.txt  ruff.toml  setup.py
.github/workflows/: lint.yml  pytest.yml
data/: brtpgrd.gxf
interpies/: __init__.py  colors.py  graphics.py  grid.py  segy_io.py  spatial.py  transforms.py
notebooks/: Getting_started_with_interpies.ipynb
tests/: test_graphics.py  test_grid.py  test_spatial.py  test_transforms.py
